--- a/robot/requirements.txt
+++ b/robot/requirements.txt
@@ -2,6 +2,7 @@ apt-clone==0.2.1
 apturl==0.5.2
 asn1crypto==0.24.0
 beautifulsoup4==4.6.0
+bidict==0.21.2
 blinker==1.4
 Brlapi==0.6.6
 certifi==2018.1.18
@@ -52,11 +53,13 @@ pyRFC3339==1.0
 python-apt==1.6.5+ubuntu0.5
 python-dateutil==2.6.1
 python-debian==0.1.32
+python-engineio==4.2.0
+python-socketio==5.3.0
 pytz==2018.3
 pyxattr==0.6.0
 pyxdg==0.25
 PyYAML==3.12
-requests==2.18.4
+requests==2.25.1
 requests-unixsocket==0.1.5
 scipy==0.19.1
 SecretStorage==2.3.1
@@ -84,6 +87,7 @@ urllib3==1.22
 urwid==2.0.1
 wadllib==1.3.2
 webencodings==0.5
+websocket-client==1.1.0
 xkit==0.0.0
 youtube-dl==2018.3.14
 zope.interface==4.3.2
