--- a/robot/requirements.txt
+++ b/robot/requirements.txt
@@ -7,21 +7,28 @@ blinker==1.4
 Brlapi==0.6.6
 certifi==2018.1.18
 chardet==3.0.4
-click==6.7
+click==8.0.1
 colorama==0.3.7
 colorzero==2.0
 cryptography==2.1.4
 cupshelpers==1.0
+Cython==0.26.1
+dataclasses==0.8
 decorator==4.1.2
 defer==1.0.6
 distro-info===0.18ubuntu0.18.04.1
 feedparser==5.2.1
+Flask==2.0.1
+future==0.18.0
 gpiozero==1.6.2
 graphsurgeon==0.4.5
 html5lib==0.999999999
 httplib2==0.9.2
 idna==2.6
+importlib-metadata==4.5.0
+itsdangerous==2.0.1
 Jetson.GPIO==2.0.16
+Jinja2==3.0.1
 keyring==10.6.0
 keyrings.alt==3.0
 language-selector==0.1
@@ -33,14 +40,13 @@ louis==3.5.0
 lxml==4.2.1
 macaroonbakery==1.1.3
 Mako==1.0.7
-MarkupSafe==1.0
+MarkupSafe==2.0.1
 numpy==1.13.3
 oauth==1.0.1
 oauthlib==2.0.6
 onboard==1.4.1
 PAM==0.4.2
 pandas==0.22.0
-protobuf==3.0.0
 pycairo==1.16.2
 pycrypto==2.6.1
 pycups==1.9.73
@@ -50,7 +56,7 @@ PyJWT==1.5.3
 pymacaroons==0.13.0
 PyNaCl==1.1.2
 pyRFC3339==1.0
-python-apt==1.6.5+ubuntu0.5
+python-apt==1.6.5+ubuntu0.6
 python-dateutil==2.6.1
 python-debian==0.1.32
 python-engineio==4.2.0
@@ -69,6 +75,8 @@ ssh-import-id==5.7
 system-service==0.3
 systemd-python==234
 tensorrt==7.1.3.0
+torch @ file:///home/jetson/project/jetson-inference/build/torch-1.6.0-cp36-cp36m-linux_aarch64.whl
+typing-extensions==3.10.0.0
 ubuntu-drivers-common==0.0.0
 uff==0.6.9
 unity-scope-calculator==0.1
@@ -88,6 +96,8 @@ urwid==2.0.1
 wadllib==1.3.2
 webencodings==0.5
 websocket-client==1.1.0
+Werkzeug==2.0.1
 xkit==0.0.0
 youtube-dl==2018.3.14
+zipp==3.4.1
 zope.interface==4.3.2
